--- a/main.css
+++ b/main.css
@@ -1,6 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+body {
+    margin: 0%;
+    font-family: 'Nunito', sans-serif;
+}
+
+.center {
+    text-align: center;
+}
+
+h1,
+h3 {
+    font-family: 'Nunito', sans-serif;
+}
+
+#head {
+    padding: 20px;
+    color: white;
+}
+
+#head h3 {
+    font-size: 32px;
+    margin-bottom: 1px;
+}
+
+#head p {
+    margin-top: 0px;
+}
+
 #logo {
     float: left;
     text-decoration: none;
+    margin-left: 30px;
 }
 
 ul {
@@ -9,7 +40,6 @@ ul {
     padding: 16px 32px;
     overflow: hidden;
     background-color: #9C8AF1;
-    font-weight: bold;
 }
 
 #head {
@@ -41,9 +71,11 @@ li a:hover {
 
 #left {
     margin-left: 40px;
+    padding: 10px;
     float: left;
     width: 25%;
-    height: 160px;
+    height: 230px;
+    border-radius: 20px;
     background-color: white;
     box-shadow: 0px 0px 10px #489196;
 }
@@ -56,8 +88,10 @@ li a:hover {
 #center {
     display: inline-block;
     margin: 0 auto;
+    padding: 10px;
     width: 25%;
-    height: 160px;
+    height: 230px;
+    border-radius: 20px;
     background-color: white;
     box-shadow: 0px 0px 10px #489196;
 }
@@ -69,9 +103,11 @@ li a:hover {
 
 #right {
     margin-right: 40px;
+    padding: 10px;
     float: right;
     width: 25%;
-    height: 160px;
+    height: 230px;
+    border-radius: 20px;
     background-color: white;
     box-shadow: 0px 0px 10px #489196;
 }
@@ -84,3 +120,21 @@ li a:hover {
 #input1 {
     border-radius: 24%;
 }
+
+.paraFont {
+    font-family: 'Inter', sans-serif;
+}
+
+.spanText {
+    color: #808080;
+}
+
+.spanText1 {
+    color: #2B2C34;
+}
+
+.fa {
+    color: #9C8AF1;
+}
+
+#Lsection {}
