--- a/main.css
+++ b/main.css
@@ -77,12 +77,12 @@ li a:hover {
     height: 230px;
     border-radius: 20px;
     background-color: white;
-    box-shadow: 0px 0px 10px #489196;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 #left:hover {
     transform: translateY(-7px);
-    box-shadow: 0px 0px 20px #489196;
+    box-shadow: 3px 3px 15px #2B2C34;
 }
 
 #center {
@@ -93,12 +93,12 @@ li a:hover {
     height: 230px;
     border-radius: 20px;
     background-color: white;
-    box-shadow: 0px 0px 10px #489196;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 #center:hover {
     transform: translateY(-7px);
-    box-shadow: 0px 0px 20px #489196;
+    box-shadow: 3px 3px 15px #2B2C34;
 }
 
 #right {
@@ -109,16 +109,39 @@ li a:hover {
     height: 230px;
     border-radius: 20px;
     background-color: white;
-    box-shadow: 0px 0px 10px #489196;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 #right:hover {
     transform: translateY(-7px);
-    box-shadow: 0px 0px 20px #489196;
+    box-shadow: 3px 3px 15px #2B2C34;
 }
 
 #input1 {
-    border-radius: 24%;
+    margin-top: 20px;
+    border-radius: 24px;
+    padding: 10px 25px;
+    width: 250px;
+    border-color: #9C8AF1;
+    outline: none;
+}
+
+.button1 {
+    margin: 10px;
+    border-radius: 24px;
+    border: none;
+    padding: 12px 25px;
+    width: 150px;
+    background-color: #9C8AF1;
+    color: white;
+    outline: none;
+}
+
+.button1:hover {
+    transform: translateY(-7px);
+    box-shadow: 3px 3px 15px #9C8AF1;
+    color: #9C8AF1;
+    background-color: white;
 }
 
 .paraFont {
@@ -134,7 +157,10 @@ li a:hover {
 }
 
 .fa {
-    color: #9C8AF1;
+    color: #775DF4;
 }
 
-#Lsection {}
+#Lsection {
+    margin-top: 60px;
+    margin-bottom: 100px;
+}
